<resources>
    <string name="app_name">FoodChef</string>
    <string name="splash_screen">splash_screen</string>
    <string name="enjoy_restaurant_quality_meals_n_at_home">Enjoy Restaurant Quality Meals \n at Home</string>
    <string name="start_screen">start_screen</string>
    <string name="next">Next</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="design_by_n_aditya_chauhan">Designed By\nAditya Chauhan\nShravan chauhan</string>
    <string name="loginpage">loginpage</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="or_n_continue_with">or \n continue with</string>
    <string name="facebook">Facebook</string>
    <string name="Google">Button</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="google">Google</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="or_n_sign_up_with">or\n Sign Up With</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="choose_location">Choose Location</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="card_fragment">Card Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="string_home_fragment">\@string/home_fragment</string>
    <string name="view_menu">View Menu</string>
    <string name="popular">Popular</string>
    <string name="minus_button">minus_button</string>
    <string name="delete_button">delete_button</string>
    <string name="cart_item_image">cart_item_image</string>
    <string name="plus_button">plus_button</string>
    <string name="_1">1</string>
    <string name="default_web_client_id">403623335267-cjn903aomi9i0decvhhgt73c1rvudcgc.apps.googleusercontent.com</string>
</resources>