<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/loginpage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/waves_of_food"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/deliver_favorite_food"
        android:textColor="@color/green_Liner"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_extra_bold"
        android:text="@string/login_to_your_account"
        android:textColor="@color/green_Liner"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Email"
        android:background="@drawable/edit_text_shape"
        android:elevation="5dp"
        android:outlineSpotShadowColor="@color/green_Liner"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/passwordd"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Password"
        android:background="@drawable/edit_text_shape"
        android:elevation="5dp"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15dp"
        android:outlineSpotShadowColor="@color/green_Liner"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/or_n_continue_with"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordd"
        app:layout_constraintStart_toStartOf="@+id/passwordd"
        app:layout_constraintTop_toBottomOf="@+id/passwordd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/facebook"
        android:drawablePadding="-10dp"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/googleeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleeButton"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/google"
        android:drawablePadding="-10dp"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbutton"
        android:fontFamily="@font/yeonsung"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleeButton" />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/don_t_have_account"
        android:textColor="@color/green_Liner"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>