<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/loginpage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/waves_of_food"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/deliver_favorite_food"
        android:textColor="@color/green_Liner"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_extra_bold"
        android:text="@string/sign_up_here"
        android:textColor="@color/green_Liner"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints="Email"
        android:background="@drawable/edit_text_shape"
        android:elevation="5dp"
        android:ems="10"
        android:drawableLeft="@drawable/usernew"
        android:drawablePadding="15dp"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:outlineSpotShadowColor="@color/green_Liner"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="15dp"
        android:drawableLeft="@drawable/mail"
        android:outlineSpotShadowColor="@color/green_Liner"
        android:autofillHints="Email"
        android:background="@drawable/edit_text_shape"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Password"
        android:outlineSpotShadowColor="@color/green_Liner"
        android:background="@drawable/edit_text_shape"
        android:elevation="5dp"
        android:ems="10"
        android:drawablePadding="15dp"
        android:drawableLeft="@drawable/lock"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/emailAddress"
        app:layout_constraintStart_toStartOf="@+id/emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/or_n_sign_up_with"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebookButton"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/facebook"
        android:drawablePadding="-10dp"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/googleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleButton"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/google"
        android:drawablePadding="-10dp"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebookButton"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_button"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbutton"
        android:fontFamily="@font/yeonsung"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleButton" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/already_have_an_account"
        android:textColor="@color/green_Liner"
        app:layout_constraintEnd_toEndOf="@+id/create_account_button"
        app:layout_constraintStart_toStartOf="@+id/create_account_button"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button" />

</androidx.constraintlayout.widget.ConstraintLayout>