<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="103dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cartFoodImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/cart_item_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/cartFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/yeonsung"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/cartFoodPrice"
                app:layout_constraintStart_toEndOf="@+id/cartFoodImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartFoodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/yeonsung"
                android:text="TextView"
                android:textColor="@color/green_Liner"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cartFoodImage"
                app:layout_constraintTop_toBottomOf="@+id/cartFoodName" />

            <ImageButton
                android:id="@+id/plusButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/addtocart"
                android:contentDescription="@string/plus_button"
                android:src="@drawable/plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/_1"
                app:layout_constraintBottom_toBottomOf="@+id/plusButton"
                app:layout_constraintEnd_toStartOf="@+id/plusButton"
                app:layout_constraintTop_toTopOf="@id/plusButton" />

            <ImageButton
                android:id="@+id/minusButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/addtocart"
                android:contentDescription="@string/minus_button"
                app:layout_constraintBottom_toBottomOf="@id/cardItemQuantity"
                app:layout_constraintEnd_toStartOf="@id/cardItemQuantity"
                app:layout_constraintTop_toTopOf="@id/cardItemQuantity"
                app:srcCompat="@drawable/minus" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete_button"
                app:layout_constraintEnd_toEndOf="@+id/plusButton"
                app:layout_constraintStart_toStartOf="@+id/minusButton"
                app:layout_constraintTop_toBottomOf="@+id/plusButton"
                app:srcCompat="@drawable/trash" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>